# restic-replica

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/restic_replica/: __init__.py  __main__.py  app.py  console.py  repository.py  snapshots.py
src/restic_replica/__assets__/: example_config.toml  example_config_win.toml
tests/: conftest.py  test_app.py  test_console.py  test_main.py  test_repository.py  test_snapshots.py  utils.py
tests/fixtures/: logger_fixture.py  repository_fixture.py  restic_cli_fixture.py  snapshot_fixture.py  snapshot_list_fixture.py
