[project]
name = "restic-replica"
version = "0.1.1.dev0+71ea491"
description = "python-based cli tool to copy restic snapshots between repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-subprocess>=1.5.3",
    "ruff>=0.11.5",
]

[project.scripts]
restic-replica = "restic_replica.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
